# learning-app-deploy

./: .gitignore  Dockerfile  README.md  app.py  architecture_diagram.excalidraw  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci_cd.yml  pull_request_template.md
aws/: fargate-deployment-template-new.yml  fargate-deployment-template.yml
cloudformation/: aws-new.yml  aws-new_1.yml  aws-template.yml
src/: simple_aws_assets.py
tests/: test_simple_aws_assets.py
