[tool.poetry]
name = "Learning app deployment"
version = "0.1.27"
description = "poetry for python packages for image upload code"
authors = ["Pushkar Khairnar <ppkhairn@mtu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.13" #">=3.9,<3.13"
numpy = "^1.23.5"
boto3 = "^1.34.136"
awscli = "^1.33.18"
pywebio = "^1.8.3"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.28"
pyarmor = "^8.5.10"
pyinstaller = "^6.9.0"
streamlit = "^1.37.0"
python-dotenv = "^1.0.1"
faiss-cpu = "^1.10.0"
flask = "^3.1.0"
authlib = "^1.5.1"
pytest = "^8.3.5"
moto = "^5.1.1"
packaging = "^24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
